# molcat

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/molcat/: __init__.py
tests/: test.sdf  test_molcat.py
